        like query[3:5]._from_self().filter(some
        criterion). There's not much controversial here except
        that you can quickly create highly nested queries that
        are less efficient, and we want feedback on the naming
        choice.

    - query.order_by() and query.group_by() will accept multiple
      arguments using *args (like select() already does).

    - Fixed/covered case when using a False/0 value as a
      polymorphic discriminator.

    - Fixed bug which was preventing synonym() attributes from
      being used with inheritance

    - Fixed SQL function truncation of trailing underscores
      [ticket:996]

    - When attributes are expired on a pending instance, an
      error will not be raised when the "refresh" action is
      triggered and no result is found.

    - Session.execute can now find binds from metadata

    - Adjusted the definition of "self-referential" to be any
      two mappers with a common parent (this affects whether or
      not aliased=True is required when joining with Query).

    - Made some fixes to the "from_joinpoint" argument to
      query.join() so that if the previous join was aliased and
      this one isn't, the join still happens successfully.

    - Assorted "cascade deletes" fixes:
        - Fixed "cascade delete" operation of dynamic relations,
          which had only been implemented for foreign-key
          nulling behavior in 0.4.2 and not actual cascading
          deletes [ticket:895]

        - Delete cascade without delete-orphan cascade on a
          many-to-one will not delete orphans which were
          disconnected from the parent before session.delete()
          is called on the parent (one-to-many already had
          this).

        - Delete cascade with delete-orphan will delete orphans
          whether or not it remains attached to its also-deleted
          parent.

        - delete-orphan casacde is properly detected on